updated navbar and fix overflow in responsive mode

--- a/css/our-people.css
+++ b/css/our-people.css
@@ -1,6 +1,6 @@
 
 .header {
-  padding-bottom: 100px !important;
+  padding-bottom: 50px !important;
 }
 .research-bottom {
   margin-bottom: 100px;
